# SkylineDock

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_windows.bat  main.py  pyproject.toml  requirements.txt
.github/workflows/: windows-build.yml
skylinedock/: __init__.py  app.py  cli.py  installer.py  models.py  scanner.py  settings.py  source_builder.py  steam.py
tests/: test_installer.py  test_scanner.py  test_settings.py  test_source_builder.py  test_steam.py
